syntax = "proto3";

package flowstate.v1alpha1;

import "flowstate/v1alpha1/state.proto";
import "google/protobuf/any.proto";

message DoRequest {
  repeated StateContext state_contexts = 1;
  repeated google.protobuf.Any commands = 2;
}

message DoResponse {
  repeated StateContext state_contexts = 1;
  repeated google.protobuf.Any results = 2;
}

message WatchRequest {
  int64 since_rev = 1;
  bool since_latest = 2;
  map<string, string> labels = 3;
}

message WatchResponse {
  State state = 1;
}

service EngineService {
  rpc Do(DoRequest) returns (DoResponse) {}
  rpc Watch(WatchRequest) returns (stream WatchResponse) {}
}